@@ -1,20 +1,0 @@
-# $NetBSD: Makefile,v 1.17 2013/09/02 19:50:53 adam Exp $
-#
-
-DISTNAME=	gmpc-mdcover-0.20.0
-PKGREVISION=	14
-CATEGORIES=	audio
-MASTER_SITES=	http://download.sarine.nl/Programs/gmpc/0.20.0/
-
-MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	http://gmpc.wikia.com/wiki/GMPC_PLUGIN_MDCOVER
-COMMENT=	GMPC plugin that provides metadata from the local music collection
-LICENSE=	gnu-gpl-v2
-
-GNU_CONFIGURE=	yes
-USE_LIBTOOL=	yes
-USE_TOOLS+=	intltool pkg-config msgfmt
-
-.include "../../audio/gmpc/buildlink3.mk"
-.include "../../textproc/libxml2/buildlink3.mk"
-.include "../../mk/bsd.pkg.mk"
